Pull request #27: Feature/KOAN-9479 implementera restrerande av nya fiff infomodellen
Merge in RDL/mimer-datamodels from feature/KOAN-9479-implementera-restrerande-av-nya-fiff-infomodellen to develop

Squashed commit of the following:

commit 47f69b5a02badf7786bb99a68f96c4527f815239
Author: Rhen Riki (66142852) <riki.rhen@forsakringskassan.se>
Date:   Thu Apr 23 15:10:13 2026 +0200

    fix: final PR comments

commit 01fe5c8f3b51e5b889362a8915c0c93e6691e713
Author: Rhen Riki (66142852) <riki.rhen@forsakringskassan.se>
Date:   Thu Apr 23 08:09:17 2026 +0200

    fix: BAS prefix till bas roller

commit 08cdbba93cfa01b1b7534ec3f69306257bb1e3a5
Author: Rhen Riki (66142852) <riki.rhen@forsakringskassan.se>
Date:   Thu Apr 23 08:08:25 2026 +0200

    fix: typo

commit 5ddc193d58be0f507664ee9027ac0cb8d2f77cf0
Author: Rhen Riki (66142852) <riki.rhen@forsakringskassan.se>
Date:   Wed Apr 22 16:06:40 2026 +0200

    feature: Add närståendepenning "Den som är sjuk" role

commit 0cb0e4cb3307d404bdfc02d73a799cdd9a535fca
Author: Rhen Riki (66142852) <riki.rhen@forsakringskassan.se>
Date:   Wed Apr 22 16:01:46 2026 +0200

    fix: Add missing superclasses to CodecJacksonModule

commit 31603f92f1d19e70e34f59b446c9f6cd9ad917cc
Author: Rhen Riki (66142852) <riki.rhen@forsakringskassan.se>
Date:   Wed Apr 22 15:21:01 2026 +0200

    fix: Fix so tests pass. One left

commit f978ce62b1d20852a328c7444675fd7bb6ae177c
Author: Rhen Riki (66142852) <riki.rhen@forsakringskassan.se>
Date:   Wed Apr 22 15:11:02 2026 +0200

    fix: no Monstring

commit ec7cc74d82b675624909f26ec5b14fcb2ab20213
Merge: f1c3a2d 8978608
Author: Rhen Riki (66142852) <riki.rhen@forsakringskassan.se>
Date:   Wed Apr 22 12:38:10 2026 +0200

    Merge branch 'develop' into feature/KOAN-9479-implementera-restrerande-av-nya-fiff-infomodellen
    
    # Conflicts:
    #	codec-v1/src/main/java/se/fk/mimer/codec/v1/jackson/CodecJacksonModule.java
    #	codec-v1/src/main/java/se/fk/mimer/codec/v1/registry/CodecRegistries.java
